[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/Floor.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/pointer.png" type="Texture" id=2]
[ext_resource path="res://scripts/SyncBodies.gd" type="Script" id=3]
[ext_resource path="res://scripts/NetworkSetup.gd" type="Script" id=4]
[ext_resource path="res://scripts/MyScene.gd" type="Script" id=5]
[ext_resource path="res://scripts/PlayerSync.gd" type="Script" id=6]

[node name="MyScene" type="Spatial"]
script = ExtResource( 5 )

[node name="Floor" parent="." instance=ExtResource( 1 )]

[node name="NetworkSetup" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="NetworkSetup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -175.0
margin_top = -90.0
margin_right = 175.0
margin_bottom = 90.0

[node name="IpAddress" type="LineEdit" parent="NetworkSetup/VBoxContainer"]
margin_right = 350.0
margin_bottom = 24.0
align = 1
placeholder_text = "IP Address"

[node name="Nickname" type="LineEdit" parent="NetworkSetup/VBoxContainer"]
margin_top = 28.0
margin_right = 350.0
margin_bottom = 52.0
align = 1
placeholder_text = "Nickname"

[node name="Host" type="Button" parent="NetworkSetup/VBoxContainer"]
margin_top = 56.0
margin_right = 350.0
margin_bottom = 116.0
rect_min_size = Vector2( 0, 60 )
text = "Host"

[node name="Join" type="Button" parent="NetworkSetup/VBoxContainer"]
margin_top = 120.0
margin_right = 350.0
margin_bottom = 180.0
rect_min_size = Vector2( 0, 60 )
text = "Join"

[node name="HUD" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
texture = ExtResource( 2 )
stretch_mode = 5

[node name="Label" type="Label" parent="HUD"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -53.0
margin_top = -37.0
margin_right = 53.0
text = "100"
align = 1

[node name="SyncBodies" type="Timer" parent="."]
wait_time = 0.3
script = ExtResource( 3 )

[node name="PlayerSync" type="Timer" parent="."]
wait_time = 0.05
script = ExtResource( 6 )

[node name="PauseMenu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="ColorRect" parent="PauseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.219608, 0.219608, 0.219608, 0.756863 )

[node name="CenterContainer" type="CenterContainer" parent="PauseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -22.0
margin_right = 32.0
margin_bottom = 22.0

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/CenterContainer"]
margin_right = 200.0
margin_bottom = 134.0
custom_constants/separation = 10

[node name="Paused" type="Label" parent="PauseMenu/CenterContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 14.0
text = "Paused"
align = 1
valign = 1

[node name="Resume" type="Button" parent="PauseMenu/CenterContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 200.0
margin_bottom = 74.0
rect_min_size = Vector2( 200, 50 )
text = "Resume"

[node name="Quit" type="Button" parent="PauseMenu/CenterContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 200.0
margin_bottom = 134.0
rect_min_size = Vector2( 200, 50 )
text = "Quit"

[connection signal="text_changed" from="NetworkSetup/VBoxContainer/IpAddress" to="NetworkSetup" method="_on_IpAddress_text_changed"]
[connection signal="text_changed" from="NetworkSetup/VBoxContainer/Nickname" to="NetworkSetup" method="_on_IpAddress_text_changed"]
[connection signal="pressed" from="NetworkSetup/VBoxContainer/Host" to="NetworkSetup" method="_on_Host_pressed"]
[connection signal="pressed" from="NetworkSetup/VBoxContainer/Join" to="NetworkSetup" method="_on_Join_pressed"]
[connection signal="timeout" from="SyncBodies" to="SyncBodies" method="_on_SyncBodies_timeout"]
[connection signal="timeout" from="PlayerSync" to="PlayerSync" method="_on_PlayerSync_timeout"]
